# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "inside-baseball"
version = "0.1.0"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2021"
repository = "https://github.com/whatisaphone/inside-baseball"
license = "AGPL-3.0"
description = "Modding tools for Backyard Baseball 2001"
categories = ["command-line-utilities", "compilers", "game-engines"]
keywords = ["backyard-baseball", "scumm", "sputm"]
include = ["README.md", "Cargo.toml", "Cargo.lock", "src/**/*.rs"]

[features]
strict = []

[dependencies]
arrayvec = "0.7.2"
byteordered = "0.6.0"
clap = { version = "3.2.19", features = ["derive"] }
indexmap = "1.9.1"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tracing-tree = "0.2.1"

[profile.release]
lto = true
codegen-units = 1
